# git-gen

./: Cargo.toml  README.md
.github/workflows/: check.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  llm_provider.rs  main.rs
crates/cli/src/commands/: commit.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/interfaces/: git_repository.rs  llm_generater.rs  mod.rs
crates/core/src/services/: commit_service.rs  mod.rs
crates/git/: Cargo.toml
crates/git/src/: lib.rs
crates/llm/: Cargo.toml
crates/llm/src/: common.rs  lib.rs  prompt.md  prompt.rs
crates/llm/src/gemini/: api.rs  config.rs  mod.rs  types.rs
crates/llm/src/openai/: api.rs  config.rs  mod.rs  types.rs
