[package]
name = "git-gen-cli"
edition = "2024"
version.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
dirs = "6.0.0"
git-gen-core = { path = "../core" }
git-gen-git = { path = "../git" }
git-gen-llm = { path = "../llm" }

