[package]
name = "git-gen-llm"
edition = "2024"
version.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
git-gen-core = { path = "../core" }
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
